--- a/chaiorcode/chai/templates/chai/all_index.html
+++ b/chaiorcode/chai/templates/chai/all_index.html
@@ -1,12 +1,11 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-	</head>
-	<body>
-		<h1>All types of chai</h1>
-	</body>
-</html>
+{% extends "layout.html" %} 
+
+
+{% block title %} 
+All Chai Page
+{% endblock %}
+
+
+{% block content %}
+  <h1>All Chai Page | Home Page</h1> 
+{% endblock %}
