--- a/chaiorcode/templates/website/index.html
+++ b/chaiorcode/templates/website/index.html
@@ -1,13 +1,11 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Debanjan</title>
-		<link rel="stylesheet" href="{% static 'style.css' %}" />
-	</head>
-	<body>
-		<h1 style="color: white">HI I AM DEBANJAN</h1>
-	</body>
-</html>
+{% extends "layout.html" %} 
+
+
+{% block title %} 
+Home Page
+{% endblock %}
+
+
+{% block content %}
+  <h1>Chaiorcode | Home Page</h1> 
+{% endblock %}
