tailwind css and superuser

--- a/chaiorcode/templates/website/index.html
+++ b/chaiorcode/templates/website/index.html
@@ -1,11 +1,4 @@
-{% extends "layout.html" %} 
+{% extends "layout.html" %} {% block title %} Home Page {% endblock %} {% block content %}
 
-
-{% block title %} 
-Home Page
-{% endblock %}
-
-
-{% block content %}
-  <h1>Chaiorcode | Home Page</h1> 
+<h1 class="text-5xl bg-slate-600 font-mono">Chaiorcode | Home Page</h1>
 {% endblock %}
