--- a/chaiorcode/templates/layout.html
+++ b/chaiorcode/templates/layout.html
@@ -1,19 +1,17 @@
-{% load static %}
+{% load static tailwind_tags %} {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>{% block title %} 
-            default
-            {% endblock %}</title>
+		<title>{% block title %} default {% endblock %}</title>
 		{% comment %} we can override this whenever we want {% endcomment %}
 		<link rel="stylesheet" href="{% static 'style.css' %}" />
+		{% tailwind_css %}
 	</head>
 	<body>
 		<nav>This is a navbar</nav>
-		{% block content %}
-        
-         {% endblock %}
+		{% block content %} {% endblock %}
 	</body>
 </html>
